# genvid

./: .env.example  .gitignore  README.md  commands.md  docker-compose.yml  engineering-challenges.md  gcs-reference-images-lifecycle.json  package-lock.json
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  api_spec.json  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 269ab8f750f0_add_video_generation_jobs.py  26c6e1a5bf38_add_videos_table.py  2a9b20fb836d_initial.py  369411bf5f64_create_users_and_oauth_tables.py  72181de61e3c_add_follows_table.py  7ae3a680b832_create_initial_tables.py  7c385d5ede5c_changes_in_videos.py  7d90b2e6f4a1_add_reference_images_to_generation_jobs.py  844feb9fc28e_init.py  8a9264eb3fc6_new_updates.py  9d9b02df3acc_new_models_included.py  b19a6c714dfb_added_field_to_video_generation_job_to_.py  ba3ab3add5ca_create_initial_tables.py  c1f8a30c769e_fixes_in_video_model.py  d6f472423c1c_backfill_likes_count.py  dcffa0cb959e_changes.py  f2ca7f63cecf_initial_schema.py  f6cf04b59bf0_backfill_likes_count_0.py
backend/app/: main.py  models.py
backend/app/auth/: __init__.py  google_oauth.py  jwt.py  models.py  password.py  router.py  schemas.py
backend/app/core/: config.py  db.py  dependencies.py  permissions.py  utils.py
backend/app/feed/: router.py  (+2 more)
backend/auth/: google_oauth.py
backend/migrations/: env.py
backend/src/: auth_util.py  config.py  db.py  health.py  logging.py  main.py  middleware.py  models.py  security.py
backend/templates/: index.html
(+103 files in other folders)
