[project]
name = "backend"
version = "0.1.0"
description = "Genvid Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.5.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.0",
]